fixed header issues with alignment in responsive design need to add tablet and larger breakpoints

--- a/less/navbar.less
+++ b/less/navbar.less
@@ -18,10 +18,7 @@ header {
   background: white;
   border-bottom: 3px dotted @border-color;
   .menu-btn {
-    position: absolute;
     z-index: 1100;
-    right: 2rem;
-    top: 2rem;
     cursor: pointer;
     transition: all 1s ease-in-out;
     .btn-line {
@@ -30,7 +27,6 @@ header {
       margin: none;
       margin-bottom: 0.5rem;
       background: @font-color;
-      transform: translate(0rem, -0.5rem);
     }
   }
   .menu-btn.close {
